# voice-svc

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.example.yml  pyproject.toml
.github/: .commitlintrc.json
.github/workflows/: ci.yml  release.yml
src/voice_svc/: __init__.py  __main__.py  app.py  config.py  engine_registry.py  fatigue_level.py  prosody.py  samples.py  synthesis.py
src/voice_svc/engines/: base.py  mock.py  piper.py  xtts.py
tests/integration/: conftest.py  test_container_e2e.py  test_container_gpu_e2e.py
tests/voice_svc/: test_app_health_voices.py  test_app_openai_compat.py  test_app_synthesize.py  test_config.py  test_engine_registry.py  test_engines_mock.py  test_engines_piper.py  test_engines_xtts.py  test_fatigue_level.py  test_prosody.py  test_samples.py  test_synthesis.py
